tests/bind/bad/after-declaration.py
foo()

def foo():
    return 0
